# python-413-homeworks

./: .gitignore  .pylintrc  freeze_list  hws.sh  rename.py  requirements.txt
02/: PYTHON413 HW №02.md
02-html-css-js/: index.html
03/: PYTHON413 HW №03.md  index.html
04-html-css-js/: checklist.txt  example.html  index.html  script.js  test.txt
05/: PYTHON413 HW №05.md
05-html-css-js/: script.js
06-html-css-js/: index.html
08/: PYTHON413 HW №08.md
08-html-css-js/: script.js
09/: script.js
10/: style.css
10-html-css-js/: index.html  script.js
11/: PYTHON413 HW №11.md
11-html-css-js/: index.html  script.js
38-django/: .djlint.toml  .gitignore  README.md  README_RUS.MD  gitrepo.txt  pyproject.toml
38-django/barbershop/: settings.py  urls.py
38-django/core/: test_data.py  urls.py  views.py
38-django/core/static/css/: base.css  landing.css  order_details.css  orders_list.css
38-django/core/templates/: landing.html  order_details.html  orders_list.html  thanks.html
38-django/core/templatetags/: time_filters.py
38-django/templates/: base.html
45-django/: .env.example  .gitignore  pyproject.toml
45-django/core/: apps.py  forms.py  models.py  views.py
45-django/core/migrations/: 0006_alter_order_appointment_date.py
45-django/core/static/css/: form.css  orders_list.css
45-django/core/static/js/: forms.js
45-django/core/templates/forms/: create_order.html
45-django/core/templates/includes/: header.html
45-django/core/templatetags/: range_filter.py  uuid_filter.py
45-django/static/css/: base.css
45-django/static/js/: base.js
(+302 files in other folders)
